--- a/res/layout/activity_kravi.xml
+++ b/res/layout/activity_kravi.xml
@@ -25,7 +25,7 @@
 		android:layout_height="wrap_content"
 		android:minEms="4"
 		android:textSize="48sp"
-		android:text="number here"
+		android:text="@string/number_here"
 		android:background="@color/black"
 		android:textColor="@color/yellow"
 		android:textAppearance="?android:attr/textAppearanceLarge" />
